--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,75 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Trang chủ</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="fontAwesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
+
 <body>
-<%  var a = {
-        hello:"Xin chao"
-    }
-%>
-    <h1><%=a.hello%></h1>
-<%- include("template/header") %>
+    <div class="bg" style="background-image: url(images/bg1.jpg)">
+        <div class="header-topbar">
+            <div class="container">
+                <ul class="pull-left">
+                    <li>
+                        <a href="#" style="border-right: 1px solid rgba(255, 255, 255, 0.3);">
+                            <i class="fa fa-phone" aria-hidden="true"></i> +024 236 255
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-google-plus" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="pull-right">
+                    <li>
+                        <a href="">
+                            <i class="fa fa-question-circle" aria-hidden="true"></i> Trợ giúp
+                        </a>
+                    </li>
+                    <li><span class="rot">|</span></li>
+                    <li>
+                        <a href="">
+                            <i class="fa fa-info-circle" aria-hidden="true"></i> Thông tin
+                        </a>
+                    </li>
+                    <li><span class="rot">|</span></li>
+                    <li>
+                        <a href="">
+                            <i class="fa fa-pencil-square-o" aria-hidden="true"></i> Đăng ký
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-sm-12 text-center">
+                        <h1 class="banner">Chào mừng đến câu lạc bộ epc</h1>
+                        <h4>EXPLORE OUR ECO AND ADVENTURE TRAVEL ITINERARIES</h4>
+                        <a href="">
+                            <i class="fa fa-google-plus" aria-hidden="true"></i> Đăng nhập với Google
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
