--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="bg" style="background-image: url(images/bg1.jpg)">
+    <div class="bg" style="background-image: url(images/bg.jpg)">
         <div class="header-topbar">
             <div class="container">
                 <ul class="pull-left">
@@ -46,7 +46,7 @@
                     </li>
                     <li><span class="rot">|</span></li>
                     <li>
-                        <a href="">
+                        <a href="#" data-toggle="modal" data-target="#modalRegister">
                             <i class="fa fa-pencil-square-o" aria-hidden="true"></i> Đăng ký
                         </a>
                     </li>
@@ -65,6 +65,26 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="modalRegister" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Modal Header</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Some text in the modal.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
         </div>
     </div>
 
