--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
                     <div class="col-md-12 col-sm-12 text-center">
                         <h1 class="banner">Chào mừng đến câu lạc bộ epc</h1>
                         <h4>EXPLORE OUR ECO AND ADVENTURE TRAVEL ITINERARIES</h4>
-                        <a href="">
+                        <a href="/api/auth/google/login">
                             <i class="fa fa-google-plus" aria-hidden="true"></i> Đăng nhập với Google
                         </a>
                     </div>
